Minor adjustments